fixing misaligned cards

--- a/cv.css
+++ b/cv.css
@@ -90,7 +90,7 @@ section .section-title {
   .double-column-when-wide-enough {
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: auto auto;
+    grid-template-rows: min-content min-content;
   }
 }
 
